--- a/FeedControl/nbproject/project.properties
+++ b/FeedControl/nbproject/project.properties
@@ -1,3 +1,10 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
+file.reference.FeedControl-FeedControl=.
 file.reference.Trabalho-FeedControl=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.Trabalho-FeedControl}
+site.root.folder=${file.reference.FeedControl-FeedControl}
+start.file=index.html
+web.context.root=/FeedControl
